--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "build": "npx tsc",
-    "start": "npm start ./dist/index.js"
+    "start": "node ./dist/index.js"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
