--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,18 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "serve": "tsc && vite build && vite preview --port 5002"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "express": "^4.18.2",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "react-use": "^17.4.0",
     "socket.io-client": "^4.6.1"
   },
   "devDependencies": {
